syntax = "proto3";

package session;

option go_package = "github.com/satimoto/go-ocpi/ocpirpc";

service SessionService {
  rpc SessionCreated(SessionCreatedRequest) returns (SessionCreatedResponse);
};

message SessionCreatedRequest { string session_uid = 1; };

message SessionCreatedResponse {};
